fixed issues with breakpoints, sorted out header so that it only appears on small devices.

--- a/02-Homework/Assets/Images/style.css
+++ b/02-Homework/Assets/Images/style.css
@@ -1,10 +1,5 @@
 
 
-.rlrName {
-    background-color: cadetblue;
-    color: white;
-}
-
 body {
     background-image: url(https://image.freepik.com/free-photo/gray-clean-paperboard_95678-95.jpg);
    }
@@ -15,13 +10,21 @@ padding: 0rem;
     background-color: cadetblue;
     color: white;
     margin-left: 20px;
+
 }
 
-
+.p{
+    text-align: justify;
+}
 
 h1{
     background-color: white;
     color: cadetblue;
+}
+#page-header {
+background-color: cadetblue;
+color: white;
+text-align: center;
 }
 
 h2 {
@@ -33,13 +36,23 @@ h2 {
     max-width: 60%;
     position: relative;
     top: 20px;
-    right: 75px;
+    margin-left: 25px;
     background-color: white;
-    border: solid, black, 10px;
+    border-style: outset;
+    border: solid cadetblue 1px;
+    min-width: 340px;
+    margin-bottom: 30%;
 }
 
 .portfolioImg {
     margin: 10px 5px;
+    max-width: 250px;
+    width: 100%;
+}
+
+#main-body-image{
+max-width: 250px;
+width: 100%;
 }
 
 #header-row {
@@ -47,18 +60,30 @@ h2 {
 }
 #footer{
     background-color:rgb(102,102,102);
-    border-top: solid, cadetblue, 10px;
+    border-top: 10px cadetblue solid;
     color: white;
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 60px;
-    line-height: 60px;
+    height: 70px;
 }
 /* Media Queries */
 
 /* If the screen size is 600px wide or less, hide the element */
-@media only screen and (min-width: 600px) {
-    
-  }
+@media only screen and (max-width: 775px) {
+
+
+    .container {
+        max-width: 80%;
+        margin-left: 10px;
+        margin-right: 10px;
+        max-height: fit-content;
+    }
+        }
+        /* // Medium devices (tablets, 768px and up) (from bootstrap documentation) */
+@media (min-width: 760px) {
+    #page-header {
+        display: none;
+    }
+}
